--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ rvm:
   - "2.0.0"
 env: DB=postgres
 before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - psql -c 'create database "workout-wars_test"' -U postgres
   - psql -c "CREATE USER workoutwars WITH PASSWORD 'uofucs';" -U postgres
   - bundle exec rake db:create
